Implement City's CRUD to pass the tests